# NoteOverflow-BE

./: .gitignore  README.md  main.py  pyproject.toml
database/: database.db  main.py
models/: database.py  note.py  user.py
routers/: note.py  user.py
utils/: security.py  user.py
